--- a/lib/game.html
+++ b/lib/game.html
@@ -53,7 +53,7 @@
          
             
              <li>
-              <a href="/subway/" class="item-link item-content">
+              <a href="/ppsspp/" class="item-link item-content">
                 <div class="item-media">
                   <img src="./assets/rasm/subway.png" class="app-icons" />
                 </div>
