--- a/index.html
+++ b/index.html
@@ -186,33 +186,11 @@
          </div>
          <div class="white-back page-content">
             <div class="block-title block-title-medium" style="text-align: right">
-   ڤیدیۆ ستار : کار ناکات ❌
-   <br>
-   ئەنکەڤەر : کار ناکات ❌
-   <br>
-   ئۆدسیی : کار ناکات ❌
-   <br>
-   تورین: کار ناکات ❌
-   <br>
-   کاینماستەر : کار ناکات ❌
-   <br>
-   ئۆرگ ٢٠٢٠ : کار ناکات ❌
-   <br>
-   سپۆتیفای : کار ناکات ❌
-   <br>
-   پیکس ئارت : کار ناکات ❌
-   <br>
-   یوتوب : کار ناکات ❌
-   <br>
-   ئنستاگرام : کار ناکات ❌
-   <br>
-   سکارئالێت : کار ناکات ❌
-   <br>
-   ئەپ کەیک : کار ناکات ❌
-   <br>
-   ئیساینگ : کار ناکات ❌
-   <br>
-   پۆبجی هاکراوەکان : کار ناکات ❌ </div>
+  TEST ADO VINWAR STORE 
+
+CHAND LA3B SHOLDKAN AN NA
+
+</div>
 </div>
 </div>
 </a>
@@ -231,7 +209,7 @@
          </div>
          <div class="title-large">
             <div class="title-large-text" style="text-align: right">دەربارە</div>
-         </div>
+         </div>s
       </div>
    </div>
    <div class="white-back page-content">
