--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                     <div class="shadow welcome-block gradient">
                         <div class="block">
                             <a href="/new/">
-                           <div class="semibold uppercase white-color clear-title" style="text-align: right">بەخێربێت</div>
-                           <h1 style="margin-top: 0px; text-align: right" class="white-color"><span class="semibold">کورد ئەپ</span> </h1>
+                           <div class="semibold uppercase white-color clear-title" style="text-align: right">TEST APP VINWAR</div>
+                           <h1 style="margin-top: 0px; text-align: right" class="white-color"><span class="semibold">TEST APP VINWAR</span> </h1>
                            <a href="/new/" class="link">
-                              <h3 style="margin-top: 0px;opacity: 0.85" class="semibold white-color">چی تازەیە؟ <i style="font-size: 1.17em;" class="f7-icons">arrow_up_right</i></h3>
+                              <h3 style="margin-top: 0px;opacity: 0.85" class="semibold white-color">TEST APP VINWAR؟ <i style="font-size: 1.17em;" class="f7-icons">arrow_up_right</i></h3>
                            </a>
                         </div>
                      </div>
@@ -81,16 +81,16 @@
                         </div>
                      </div>
 
-                     <div class="block-title block-title-medium">ئه‌په‌كان</div>
+                     <div class="block-title block-title-medium">TEST APP VINWAR</div>
                      <div class="list no-hairlines">
                      <ul>
                         <li>
-                           <a href="/jailbreak/" class="item-link item-content">
+                           <a href="/TEST APP VINWAR/" class="item-link item-content">
                            <div class="item-media"><img class="shadow cat-icons" src="assets/img/jailbreak.jpg"></div>
                               <div class="item-inner">
                                  <div class="item-title">
-                                    <span class="semibold">جه‌ڵبرێك</span>
-                                    <div class="item-footer">٣ به‌رنامه‌</div>
+                                    <span class="semibold">TEST APP VINWAR</span>
+                                    <div class="item-footer">TEST APP VINWAR‌</div>
                                  </div>
                               </div>
                            </a>
@@ -100,8 +100,8 @@
                               <div class="item-media"><img class="shadow cat-icons" src="assets/img/apps.jpg"></div>
                               <div class="item-inner">
                                  <div class="item-title">
-                                    <span class="semibold">ئەپەکان</span>
-                                    <div class="item-footer">٦ بەرنامە</div>
+                                    <span class="semibold">TEST VINWAR APP</span>
+                                    <div class="item-footer">TEST VINWAR APP</div>
                                  </div>
                               </div>
                            </a>
@@ -111,8 +111,8 @@
                               <div class="item-media"><img class="shadow cat-icons" src="assets/img/game-hacker.png"></div>
                               <div class="item-inner">
                                  <div class="item-title">
-                                    <span class="semibold">یاریە هاکراوەکان</span>
-                                    <div class="item-footer">٢ بەرنامە</div>
+                                    <span class="semibold">TEST APP VINWAR</span>
+                                    <div class="item-footer">TEST APP VINWAR</div>
                                  </div>
                               </div>
                            </a>
@@ -122,8 +122,8 @@
                               <div class="item-media"><img class="shadow cat-icons" src="assets/img/social.jpg"></div>
                               <div class="item-inner">
                                  <div class="item-title">
-                                    <span class="semibold">تۆڕەکان</span>
-                                    <div class="item-footer">٢ بەرنامە</div>
+                                    <span class="semibold">TEST APP VINWAR</span>
+                                    <div class="item-footer">TEST APP VINWAR</div>
                                  </div>
                               </div>
                            </a>
